--- a/cf/servers.yml
+++ b/cf/servers.yml
@@ -64,8 +64,8 @@ Resources:
         Fn::ImportValue: !Sub '${EnvironmentName}-VPCID'
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 8080
-          ToPort: 8080
+          FromPort: 80
+          ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 22
@@ -82,18 +82,13 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash
-          # Install docker
-          apt-get update
-          apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-          add-apt-repository \
-          "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) \
-          stable"
-          apt-get update
-          apt-get install -y docker-ce
-          usermod -aG docker ubuntu
-          docker run -p 8080:8080 tomcat:8.0
+          apt-get update -y
+          apt-get install unzip awscli -y
+          apt-get install apache2 -y
+          systemctl start apache2.service
+          cd /var/www/html
+          aws s3 cp s3://udacity-demo-1/udacity.zip .
+          unzip -o udacity.zip
       ImageId: ami-0d1cd67c26f5fca19
       KeyName: private-server-devops-key
       SecurityGroups:
@@ -106,6 +101,7 @@ Resources:
   WebAppGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
+      AutoScalingGroupName: !Sub '${EnvironmentName}-ASG'
       VPCZoneIdentifier:
         - Fn::ImportValue: !Sub '${EnvironmentName}-PRIV-NETS'
       LaunchConfigurationName:
@@ -114,6 +110,10 @@ Resources:
       MaxSize: '5'
       TargetGroupARNs:
         - Ref: WebAppTargetGroup
+      Tags:
+        - Key: Name
+          Value: !Sub '${EnvironmentName} Web App'
+          PropagateAtLaunch: true
   WebAppLB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
@@ -165,3 +165,8 @@ Outputs:
     Value: !GetAtt BastionInstance.PublicIp
     Export:
       Name: !Sub '${EnvironmentName}-Bastion-Ip'
+  WebAppLBURL:
+    Description: URL of public web app
+    Value: !Sub 'http://${WebAppLB.DNSName}'
+    Export:
+      Name: !Sub '${EnvironmentName}-WebAppLB-URL'
